examples/type_system/failing/105_unknown_effect_suggestion.flx
fn main() -> Unit with I {
}
